--- a/css/main.css
+++ b/css/main.css
@@ -21,4 +21,12 @@ input {
 img {
   display: block;
   max-width: 100%;
+}
+
+body {
+  background-color: hsl(43deg, 100%, 99%);
+  font-family: "Lato", sans-serif;
+  min-height: 100vh;
+  line-height: 1.3;
+  color: hsl(0deg, 0%, 23%);
 }/*# sourceMappingURL=main.css.map */
