--- a/css/main.css
+++ b/css/main.css
@@ -29,4 +29,51 @@ body {
   min-height: 100vh;
   line-height: 1.3;
   color: hsl(0deg, 0%, 23%);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Castoro", serif;
+  color: hsl(176deg, 61%, 19%);
+  line-height: 1;
+  font-weight: 400;
+}
+
+.container {
+  margin-inline: auto;
+  max-width: 48rem;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5625rem;
+}
+.navbar .logo {
+  font-size: 1.125rem;
+}
+.navbar .menu-toggle {
+  padding: 0.78125rem;
+}
+.navbar .menu-toggle .cross {
+  position: relative;
+  width: 1.09375rem;
+  height: 3px;
+  background-color: hsl(0deg, 0%, 23%);
+  transform: rotate(45deg);
+}
+.navbar .menu-toggle .cross::before {
+  content: "";
+  position: absolute;
+  width: 1.09375rem;
+  height: 3px;
+  background-color: hsl(0deg, 0%, 23%);
+  top: 0;
+  left: 0;
+  transform: rotate(90deg);
 }/*# sourceMappingURL=main.css.map */
