--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -6,3 +6,55 @@ body {
 	line-height: 1.3;
 	color: $clr-neutral-200;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: $fs-heading;
+	color: $clr-primary-400;
+	line-height: 1;
+	font-weight: 400;
+}
+
+// Container Utility
+.container {
+	margin-inline: auto;
+	max-width: 48rem;
+}
+
+.navbar {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1.5625rem;
+
+	.logo {
+		font-size: 1.125rem;
+	}
+
+	.menu-toggle {
+		padding: 0.78125rem;
+
+		.cross {
+			position: relative;
+			width: 1.09375rem;
+			height: 3px;
+			background-color: $clr-neutral-200;
+			transform: rotate(45deg);
+
+			&::before {
+				content: '';
+				position: absolute;
+				width: 1.09375rem;
+				height: 3px;
+				background-color: $clr-neutral-200;
+				top: 0;
+				left: 0;
+				transform: rotate(90deg);
+			}
+		}
+	}
+}
