--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body {
   min-height: 100vh;
   line-height: 1.3;
   color: hsl(0deg, 0%, 23%);
+  font-size: 1.125rem;
 }
 
 h1,
@@ -45,6 +46,7 @@ h6 {
 
 .container {
   margin-inline: auto;
+  padding-inline: 1.5625rem;
   max-width: 48rem;
 }
 
@@ -76,4 +78,75 @@ h6 {
   top: 0;
   left: 0;
   transform: rotate(90deg);
+}
+
+.signup-container {
+  padding-top: 4.140625rem;
+  padding-bottom: 8.75rem;
+}
+.signup-container .heading {
+  font-size: 3.125rem;
+  text-align: center;
+}
+.signup-container .showcase-img {
+  margin-inline: auto;
+}
+.signup-container .signup-form {
+  margin-top: 2.1875rem;
+}
+.signup-container .signup-form .form-group {
+  margin-bottom: 1.25rem;
+}
+.signup-container .signup-form .form-group:last-of-type {
+  margin-bottom: 2.1875rem;
+}
+.signup-container .signup-form .form-group .label {
+  font-size: 0.875rem;
+  color: hsl(0deg, 0%, 75%);
+}
+.signup-container .signup-form .form-group .input-field {
+  margin-top: 0.5rem;
+  display: block;
+  width: 100%;
+  padding: 1.125rem 1.25rem;
+  background-color: transparent;
+  border: 2px solid hsl(0deg, 0%, 75%);
+  border-radius: 0.75rem;
+}
+.signup-container .signup-form .form-group .input-field::-moz-placeholder {
+  color: hsl(0deg, 0%, 23%);
+  opacity: 1;
+}
+.signup-container .signup-form .form-group .input-field:-ms-input-placeholder {
+  color: hsl(0deg, 0%, 23%);
+  opacity: 1;
+}
+.signup-container .signup-form .form-group .input-field::placeholder {
+  color: hsl(0deg, 0%, 23%);
+  opacity: 1;
+}
+.signup-container .signup-form .policy {
+  line-height: 1.7;
+}
+.signup-container .signup-form .policy .link {
+  color: hsl(171deg, 89%, 25%);
+  font-weight: 700;
+}
+.signup-container .signup-form .policy .link-underline {
+  text-decoration: underline;
+}
+.signup-container .signup-form .btn {
+  cursor: pointer;
+  background-color: hsl(176deg, 61%, 19%);
+  color: hsl(0deg, 0%, 100%);
+  display: block;
+  width: 100%;
+  padding: 1.125rem;
+  border-radius: 0.65625rem;
+  margin-top: 2.5rem;
+  margin-bottom: 0.9375rem;
+  box-shadow: 0px 0.2734375rem 1.09375rem hsla(176deg, 61%, 19%, 0.18);
+}
+.signup-container .signup-form .account {
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
