--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -5,6 +5,7 @@ body {
 	min-height: 100vh;
 	line-height: 1.3;
 	color: $clr-neutral-200;
+	font-size: 1.125rem;
 }
 
 h1,
@@ -22,9 +23,11 @@ h6 {
 // Container Utility
 .container {
 	margin-inline: auto;
+	padding-inline: 1.5625rem;
 	max-width: 48rem;
 }
 
+// Navbar
 .navbar {
 	display: flex;
 	align-items: center;
@@ -55,6 +58,83 @@ h6 {
 				left: 0;
 				transform: rotate(90deg);
 			}
+		}
+	}
+}
+
+// Signup Container
+.signup-container {
+	padding-top: calc(5.703125rem - 1.5625rem);
+	padding-bottom: 8.75rem;
+
+	.heading {
+		font-size: 3.125rem;
+		text-align: center;
+	}
+
+	.showcase-img {
+		margin-inline: auto;
+	}
+
+	.signup-form {
+		margin-top: 2.1875rem;
+
+		.form-group {
+			margin-bottom: 1.25rem;
+
+			&:last-of-type {
+				margin-bottom: 2.1875rem;
+			}
+
+			.label {
+				font-size: 0.875rem;
+				color: $clr-neutral-700;
+			}
+
+			.input-field {
+				margin-top: 0.5rem;
+				display: block;
+				width: 100%;
+				padding: 1.125rem 1.25rem;
+				background-color: transparent;
+				border: 2px solid $clr-neutral-700;
+				border-radius: 0.75rem;
+
+				&::placeholder {
+					color: $clr-neutral-200;
+					opacity: 1;
+				}
+			}
+		}
+
+		.policy {
+			line-height: 1.7;
+
+			.link {
+				color: $clr-primary-600;
+				font-weight: 700;
+
+				&-underline {
+					text-decoration: underline;
+				}
+			}
+		}
+
+		.btn {
+			cursor: pointer;
+			background-color: $clr-primary-400;
+			color: hsla(0, 0%, 100%);
+			display: block;
+			width: 100%;
+			padding: 1.125rem;
+			border-radius: 0.65625rem;
+			margin-top: 2.5rem;
+			margin-bottom: 0.9375rem;
+			box-shadow: 0px 0.2734375rem 1.09375rem hsla(176, 61%, 19%, 0.18);
+		}
+
+		.account {
+			text-align: center;
 		}
 	}
 }
